/*
* Protos for function calls to the Morpho Blue Debt adaptor.
*/

syntax = "proto3";
package steward.v3;

option go_package = "/steward_proto";

import "adaptors/base.proto";

// Represents call data for the Morpho Blue Debt adaptor.
message MorphoBlueDebtAdaptorV1 {
    oneof function {
        /***** BASE ADAPTOR FUNCTIONS *****/

        // Represents function `revokeApproval(ERC20 asset, address spender)`
        RevokeApproval revoke_approval = 1;

        /***** ADAPTOR-SPECIFIC FUNCTIONS *****/

        // Represents function `borrowFromMorphoBlue(MarketParams memory _market, uint256 _amountToBorrow)`
        BorrowFromMorphoBlue borrow_from_morpho_blue = 2;
        // Represents function `withdrawFromMorphoBlue(MarketParams memory _market, uint256 _assets)`
        WithdrawFromMorphoBlue withdraw_from_morpho_blue = 3;
    }

    /*
    * Allows strategists borrow a specific amount of an asset on Morpho Blue
    *
    * Represents function `borrowFromMorphoBlue(MarketParams memory _market, uint256 _amountToBorrow)`
    */
    message BorrowFromMorphoBlue {
        // Identifier of a Morpho Blue Market 
        string market = 1;

        // The amount of the debt token to borrow
        string amount_to_borrow = 2;
    }

    /*
    * Allows strategists to repay loan debt on Morph Blue Lending Market. Make sure to call addInterest() beforehand to ensure we are repaying what is required.
    *
    * Represents function `withdrawFromMorphoBlue(MarketParams memory _market, uint256 _assets)`
    */
    message WithdrawFromMorphoBlue {
       // Identifier of a Morpho Blue Market 
        string market = 1;

        // The amount of the debt token to repay
        string debt_token_repay_amount = 2;
    }
}

message MorphoBlueDebtAdaptorV1Calls {
    repeated MorphoBlueDebtAdaptorV1 calls = 1;
}
